<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_alpha_back">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        android:background="@android:color/white"
        app:cardForegroundColor="@android:color/transparent"
        app:cardBackgroundColor="@android:color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/def_padding"
            >

            <EditText
                android:id="@+id/dlg_ward__name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/ward_name"
                android:inputType="textShortMessage"
                android:lines="1"
                android:padding="@dimen/def_padding"
                android:layout_margin="@dimen/def_padding"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/dlg_ward__count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/ward_count"
                android:layout_margin="@dimen/def_padding"
                android:inputType="number"
                android:lines="1"
                android:padding="@dimen/def_padding"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dlg_ward__name" />

            <TextView
                android:id="@+id/dlg_ward__ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/def_padding"
                android:padding="@dimen/def_padding"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dlg_ward__count" />

            <TextView
                android:id="@+id/dlg_ward__back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/def_padding"
                android:padding="@dimen/def_padding"
                android:text="@string/back"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dlg_ward__count" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>